# energy_explorer

./: .gitignore  README.md  docker-compose.yml  index.html  netlify.toml  package-lock.json  package.json
api/: Dockerfile  main.py  pyproject.toml
api/data/: co2--5_ elec_imports_2050.json  co2--5_no_elec_imports_2050.json  co2-0_ elec_imports_2050.json  co2-0_no_elec_imports_2020.json  co2-0_no_elec_imports_2050.json  co2-10_ elec_imports_2050.json  co2-10_no_elec_imports_2050.json  co2-15_ elec_imports_2050.json  co2-15_no_elec_imports_2050.json  co2-20_ elec_imports_2050.json  co2-20_no_elec_imports_2050.json  co2-25_ elec_imports_2050.json  co2-25_no_elec_imports_2050.json  co2-5_ elec_imports_2050.json  co2-5_no_elec_imports_2050.json  scenario_11.json  scenario_14.json  scenario_3.json  scenario_7.json  scenario_8.json
api/data/import/: newScenarios.csv
api/importer/: main.py
data/: co2--5_ elec_imports_2050.json  co2--5_no_elec_imports_2050.json  co2-0_ elec_imports_2050.json  co2-0_no_elec_imports_2050.json  co2-10_elec_imports_2050.json  co2-10_no_elec_imports_2050.json  co2-15_ elec_imports_2050.json  co2-15_no_elec_imports.json  co2-15_no_elec_imports_2050.json  co2-20_ elec_imports_2050.json  co2-20_no_elec_imports_2050.csv  co2-20_no_elec_imports_2050.json  co2-25_elec_imports_2020.csv  co2-25_elec_imports_2020.json  co2-25_no_elec_imports_2050.json  co2-5_ elec_imports_2050.json  co2-5_no_elec_imports.csv  co2-5_no_elec_imports_2050.json  legend.csv  mockData.json  scenario_1.json  scenario_10.json  scenario_11.json  scenario_12.json  scenario_2.json  (+13 more)
(+32 files in other folders)
